# flatboat-cli

./: .gitignore  Cargo.toml  README.md  SECURITY.md
scripts/: get-extensions.py  install-rocker-lib.sh
src/: args.rs  main.rs  output.rs
src/cli/: mod.rs
src/controllers/: mod.rs
src/core/: core_args.rs  core_helpers.rs  core_output.rs  core_runner.rs  mod.rs
src/features/: cmds.rs  mod.rs  package.rs  workspace.rs
src/features/bot_feature/: create_bot.rs  mod.rs
src/features/package/: creation.rs  mod.rs  pkg_build.rs  result.rs
src/features/package/creation/: mod.rs
src/features/package/creation/provision/: mod.rs  pkg_ops.rs  result.rs
src/features/package/creation/provision/pkg_ops/: mod.rs  result.rs
src/features/wl_feature/: create_wl.rs  mod.rs
src/toolkits/: devcontainer.rs  docker.rs  mod.rs  oras.rs
src/toolkits/containers/: devcontainer.rs  mod.rs
src/tools/: mod.rs
src/tools/features/: mod.rs
src/tools/features/package/creation/: mod.rs
src/tools/toolkits/: mod.rs  oras.rs
src/tools/utils/: mod.rs
src/utils/: constants.rs  exec.rs  manifest.rs  mod.rs  package_config.rs  package_config_utils.rs  pull.rs  pull_utils.rs  result.rs
src/utils/manifest/: local_locator.rs  locator.rs  mod.rs  result.rs
src/utils/manifest_utils/: mod.rs  result.rs
