[package]
name = "flatboat"
version = "0.2.1"
edition = "2021"
description = "Flatboat is a CLI tool that integrates Docker and Kubernetes tooling into the ROS workspace workflow."
authors = ["Juan Camilo Sánchez Urrego @JuanCSUCoder <juancsucoder@gmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = "4.4.1"
directories = "5.0.1"
inquire = "0.6.2"
log = "0.4.20"
pretty_env_logger = "0.5.0"
subprocess = "0.2.9"
